--- a/index.html
+++ b/index.html
@@ -2,22 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>Step project Ham</title>
 </head>
 <body>
-<header class="header-bg">
-  <nav>
-    <ul class="navbar-list">
-      <li class="navbar-item"><a class="navbar-link" href="#">home</a></li>
-      <li class="navbar-item"><a class="navbar-link" href="#">about</a></li>
-      <li class="navbar-item"><a class="navbar-link" href="#">skills</a></li>
-      <li class="navbar-item"><a class="navbar-link" href="#">service</a></li>
-      <li class="navbar-item"><a class="navbar-link" href="#">work</a></li>
-      <li class="navbar-item"><a class="navbar-link" href="#">testimo</a></li>
+<section id="home">
+  <nav class="nav-container">
+    <div class="logo">
+      <a href="#" class="logo-link"><h3 class="img-logo">H</h3>
+      <h4 class="logo-text">the</h4></a>
+    </div>
+    <ul class="nav-menu-list">
+      <li class="nav-menu-item"><a class="nav-menu-link" href="#">home</a></li>
+      <li class="nav-menu-item"><a class="nav-menu-link" href="#">about</a></li>
+      <li class="nav-menu-item"><a class="nav-menu-link" href="#">skills</a></li>
+      <li class="nav-menu-item"><a class="nav-menu-link" href="#">service</a></li>
+      <li class="nav-menu-item"><a class="nav-menu-link" href="#">work</a></li>
+      <li class="nav-menu-item"><a class="nav-menu-link" href="#">testimo</a></li>
+      <li class="nav-menu-item"><a class="nav-menu-link" href="#"><i class="fas fa-search"></i></a></li>
     </ul>
   </nav>
-</header>
+  <div class="header-container">
+    <h2 class="header-text">The Ham is&nbsp<span class="text-green">Wordpress theme</span></h2>
+    <h1 class="header-text-big">we are creative</h1>
+    <h3 class="header-text-small">Just Buy And Enjoy These Awesome Features</h3>
+    <div class="btn-container">
+      <a href="#" class="subscribe-btn">EXPLORE NOW</a>
+      <a href="#" class="articles-btn">purchase now</a>
+    </div>
+  </div>
+</section>
+<section id="services">
+  <div class="options">
+    <div class="options-item">
+      <div class="options-item-content">
+        <img src="img/icon1.png" alt="icon1">
+        <p class="options-item-content text">Different theme option</p>
+      </div>
+    </div>
+    <div class="options-item">
+      <div class="options-item-content">
+        <img src="img/icon2.png" alt="icon2">
+        <p class="options-item-content text">fully customizable</p>
+      </div>
+    </div>
+    <div class="options-item">
+      <div class="options-item-content">
+        <img src="img/icon3.png" alt="icon3">
+        <p class="options-item-content text">unlimited support</p>
+      </div>
+    </div>
+    <div class="options-item">
+      <div class="options-item-content">
+        <img src="img/icon4.png" alt="icon4">
+        <p class="options-item-content text">responsive all device</p>
+      </div>
+    </div>
+  </div>
+  <div class="services-container">
+    <h2 class="services-header">Our Services</h2>
+    <div class="separator">
+    </div>
+    <div class="services-tabs">
+      <ul>
+        <li class="services-tabs-item">Web Design</li>
+        <li class="services-tabs-item">Graphic Design</li>
+        <li class="services-tabs-item">Online Support</li>
+        <li class="services-tabs-item">App Design</li>
+        <li class="services-tabs-item">Online Marketing</li>
+        <li class="services-tabs-item">Seo Service</li>
+      </ul>
+      <ul>
+        <li class="services-tabs-content"></li>
+        <li class="services-tabs-content"></li>
+        <li class="services-tabs-content"></li>
+        <li class="services-tabs-content"></li>
+        <li class="services-tabs-content"></li>
+        <li class="services-tabs-content"></li>
+      </ul>
+    </div>
+  </div>
+</section>
+<script src="https://kit.fontawesome.com/7d7e199094.js" crossorigin="anonymous"></script>
 </body>
 </html>
