add purchase section

--- a/index.html
+++ b/index.html
@@ -72,13 +72,23 @@
     <div class="services-tabs-wrapper">
       <ul class="services-tabs">
         <li class="services-tabs-title active">Web Design
+          <i class="fas fa-caret-down services-tabs-title-caret visible"></i>
+        </li>
+        <li class="services-tabs-title">Graphic Design
           <i class="fas fa-caret-down services-tabs-title-caret"></i>
         </li>
-        <li class="services-tabs-title">Graphic Design</li>
-        <li class="services-tabs-title">Online Support</li>
-        <li class="services-tabs-title">App Design</li>
-        <li class="services-tabs-title">Online Marketing</li>
-        <li class="services-tabs-title">Seo Service</li>
+        <li class="services-tabs-title">Online Support
+          <i class="fas fa-caret-down services-tabs-title-caret"></i>
+        </li>
+        <li class="services-tabs-title">App Design
+          <i class="fas fa-caret-down services-tabs-title-caret"></i>
+        </li>
+        <li class="services-tabs-title">Online Marketing
+          <i class="fas fa-caret-down services-tabs-title-caret"></i>
+        </li>
+        <li class="services-tabs-title">Seo Service
+          <i class="fas fa-caret-down services-tabs-title-caret"></i>
+        </li>
       </ul>
       <ul class="service-tabs-data">
         <li class="services-tabs-content open">
