fixed purchase section

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <h1 class="header-text-big">we are creative</h1>
     <h3 class="header-text-small">Just Buy And Enjoy These Awesome Features</h3>
     <div class="btn-container">
-      <a href="#" class="explore-btn">EXPLORE NOW</a>
-      <a href="#" class="purchase-btn">purchase now</a>
+      <button type="button" class="explore-btn">EXPLORE NOW</button>
+      <button type="button" class="purchase-btn">purchase now</button>
     </div>
   </div>
 </section>
@@ -92,27 +92,27 @@
       </ul>
       <ul class="service-tabs-data">
         <li class="services-tabs-content open">
-            <img class= "services-tabs-img" src="img/Web-design.png" alt="Web-design">
+            <img class= "services-tabs-img" src="img/Services/web-design.jpg" alt="Web-design">
             <p class= "services-tabs-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur nulla vel, inventore dolores repudiandae eligendi? Maiores asperiores unde culpa repellendus nemo similique magnam alias facere hic iste, reiciendis debitis consequuntur dolor, dolores dolore obcaecati inventore cumque doloribus quasi delectus, enim a blanditiis sit! Distinctio alias facilis itaque quos officia nam qui unde iure, doloribus aliquid consequuntur, quae corporis ex dolores delectus quam voluptatum atque magni est, laudantium tempora repellendus id placeat molestiae!</p>
         </li>
         <li class="services-tabs-content">
-            <img class= "services-tabs-img" src="img/Web-design.png" alt="Web-design">
+            <img class= "services-tabs-img" src="img/Services/graphic-design.jpg" alt="Graphic Design">
             <p class= "services-tabs-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur nulla vel, inventore dolores repudiandae eligendi? Maiores asperiores unde culpa repellendus nemo similique magnam alias facere hic iste, reiciendis debitis consequuntur dolor, dolores dolore obcaecati inventore cumque doloribus quasi delectus, enim a blanditiis sit! Distinctio alias facilis itaque quos officia nam qui unde iure, doloribus aliquid consequuntur, quae corporis ex dolores delectus quam voluptatum atque magni est, laudantium tempora repellendus id placeat molestiae! Veritatis sit, ut inventore iure sapiente voluptates!</p>
         </li>
         <li class="services-tabs-content">
-            <img class= "services-tabs-img" src="img/Web-design.png" alt="Web-design">
+            <img class= "services-tabs-img" src="img/Services/online-support.jpg" alt="Online Support">
             <p class= "services-tabs-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur nulla vel, inventore dolores repudiandae eligendi? Maiores asperiores unde culpa repellendus nemo similique magnam alias facere hic iste, reiciendis debitis consequuntur dolor, dolores dolore obcaecati inventore cumque doloribus quasi delectus, enim a blanditiis sit!</p>
         </li>
         <li class="services-tabs-content">
-            <img class= "services-tabs-img" src="img/Web-design.png" alt="Web-design">
+            <img class= "services-tabs-img" src="img/Services/app-design.jpg" alt="App Design">
             <p class= "services-tabs-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur nulla vel, inventore dolores repudiandae eligendi? Maiores asperiores unde culpa repellendus nemo similique magnam alias facere hic iste, reiciendis debitis consequuntur dolor, dolores dolore obcaecati inventore cumque doloribus quasi delectus, enim a blanditiis sit! Distinctio alias facilis itaque quos officia nam qui unde iure, doloribus aliquid consequuntur, quae corporis ex dolores delectus quam voluptatum atque magni est!</p>
         </li>
         <li class="services-tabs-content">
-            <img class= "services-tabs-img" src="img/Web-design.png" alt="Web-design">
+            <img class= "services-tabs-img" src="img/Services/online-marketing.jpg" alt="Online Marketing">
             <p class= "services-tabs-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur nulla vel, inventore dolores repudiandae eligendi? Maiores asperiores unde culpa repellendus nemo similique magnam alias facere hic iste, reiciendis debitis consequuntur dolor, dolores dolore obcaecati inventore cumque doloribus quasi delectus, enim a blanditiis sit! Distinctio alias facilis itaque quos officia nam qui unde iure.</p>
         </li>
         <li class="services-tabs-content">
-            <img class= "services-tabs-img" src="img/Web-design.png" alt="Web-design">
+            <img class= "services-tabs-img" src="img/Services/seo-service.jpg" alt="Seo Service">
             <p class= "services-tabs-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur nulla vel, inventore dolores repudiandae eligendi? Maiores asperiores unde culpa repellendus nemo similique magnam alias facere hic iste, reiciendis debitis consequuntur dolor, dolores dolore obcaecati inventore cumque doloribus quasi delectus, enim a blanditiis sit! Distinctio alias facilis itaque quos officia nam qui unde iure, doloribus aliquid consequuntur.</p>
         </li>
       </ul>
